clusters/cl01tl/manifests/gitea/Ingress-gitea-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-tailscale
  namespace: gitea
  labels:
    app.kubernetes.io/name: gitea-tailscale
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/part-of: gitea
    tailscale.com/proxy-class: default
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - gitea-cl01tl
      secretName: gitea-cl01tl
  rules:
    - host: gitea-cl01tl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea-http
                port:
                  name: http
